--- a/SS.css
+++ b/SS.css
@@ -16,7 +16,8 @@ display:flex;
 justify-content:space-between;
 align-items:center;
 position:fixed;
-padding:10px,30px;
+/*padding:10px,30px;*/
+
 z-index: 9999;
 height:90px;
 background-color:#c7791b;
@@ -38,6 +39,7 @@ nav.navbar a{
 	min-height:100vh;
 	width:100%;
 	background-image:url('assets/background-1.jpg');
+	padding:100px 50px ;
 	background-size: 100% 100%;
 	display: flex;
 	justify-content:center;
@@ -57,7 +59,8 @@ nav.navbar a{
 	min-height: 100vh;
 	background-image:url('assets/background-2.jpg');
 	background-size:100% 100%;
-	padding:60px 30px;
+	/*padding:60px 30px;*/
+	padding:100px 50px ;
 }
 .title{
 	text-align:center;
@@ -67,24 +70,34 @@ nav.navbar a{
 	text-transform:capitalize;
 	font-weight:400;
 }
-.menu.parent-menu{
+.menu.parent-menu:.after{
+
 display:flex;
 justify-content:center;
 padding:100px 50px ;
 flex-wrap:wrap;
 }
+
+
 .menu.parent-menu .menu-food-item{
-width:100px;
+
+
+width: 10px;
 height:100px;
-margin:30px;
+margin:auto;
 overflow:hidden;
 position:relative;
+
 }
+
 .menu.parent-menu .menu-food-item img{
 width: 100%;
 height:100%;
 cursor:pointer;
+
 }
+
+
 .menu.parent-menu.menu-food-item.icoon {
 position:absolute;
 width:100%;
@@ -96,8 +109,8 @@ padding:10px 20px;
 background-color:#c7791b;
 left:0px;
 bottom:-100px;
-transition:.5s linear;
-}
+transition:.5s linear;}
+
 
 .menu.parent-menu .menu-food-item.icoon i{
 color:white;
@@ -110,7 +123,10 @@ min-height:100vh;
 background-image:url('assets/background-3.jpg');
 background-size: 100% 100%;
 display: flex;
-align-items: center;}
+align-items: center;
+padding:100px 50px ;
+
+}
 .about div{
 max-width:600px;
 margin:50px 60px 0px;
@@ -128,9 +144,43 @@ padding-left: 30px;
 
 	color:white;
 	margin:20px 0px;
-	line-height:1.7;
+	line-height:1.5;
+	font-size: 20px;
 }
+/*about end*/
+/*service start*/
+.Services{
+padding:20px;
+min-height: 500px;
+background-image:url('assets/background-4.jpg');
+background-size: 100% 100%;
+}
+.services.parent-services{
+padding: 20px;
+display: flex;
+justify-content: center;
+flex-wrap: wrap;
 
+
+}
+.Services .parent-Services div{
+	width: 300px;
+	margin: 20px;
+	height: 200px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.Services .parent-Services div img{
+ height: 100px;
+width: 100px;
+
+}
+.Services .parent-Services div .title{
+
+
+	font-size: 30px;
+}
 
 
 
