--- a/SS.css
+++ b/SS.css
@@ -12,11 +12,12 @@ parent-container {
 }
 nav.navbar{
 width:100%;
+height: 100%;
 display:flex;
 justify-content:space-between;
 align-items:center;
 position:fixed;
-/*padding:10px,30px;*/
+padding:10px,30px;
 
 z-index: 9999;
 height:90px;
@@ -40,7 +41,7 @@ nav.navbar a{
 	width:100%;
 	background-image:url('assets/background-1.jpg');
 	padding:100px 50px ;
-	background-size: 100% 100%;
+	background-size: cover;
 	display: flex;
 	justify-content:center;
 	align-items:center;
@@ -55,8 +56,8 @@ nav.navbar a{
 }
 /*banner end*/
 .menu {
-	width: 100%;
-	min-height: 100vh;
+	width: 100% ;
+	min-height: 150vh;
 	background-image:url('assets/background-2.jpg');
 	background-size:100% 100%;
 	/*padding:60px 30px;*/
@@ -91,12 +92,7 @@ position:relative;
 
 }
 
-/*.menu.parent-menu .menu-food-item img{
-width: 100%;
-height:100%;
-cursor:pointer;
 
-}*/
 
 
 .menu.parent-menu.menu-food-item.icoon {
@@ -151,10 +147,11 @@ padding-left: 30px;
 /*about end*/
 /*service start*/
 .Services{
-	color: ;
+	
 padding:30px;
 min-height: 500px;
-background-image:url('assets/backround-9.jpg');
+width: 103%;
+background-image:url('assets/background-4.jpg');
 background-size:100% 100%;
 background-position:center;
 }
@@ -171,8 +168,16 @@ background-position:center;
  }
   .Services .parent-Services div{
         width: 300px;
-        margin: 20px;
+        
         height: 200px;
+    margin-top: 10px;
+padding-top: 15px;
+padding-bottom: 15px;
+/*moohimmmmaaaa*/
+margin-left: 170px;
+border-radius: 5px;
+width: 25%;
+width: 100%;
       }
 
 
@@ -185,10 +190,14 @@ background-position:center;
 	flex-direction: row;
 justify-content: space between;
 	align-items: center;
+	float:left;
+	
 }
 .Services .parent-Services div img{
  height: 100px;
-width: 100px;
+ width: 100px;
+
+
 
 
 
@@ -197,7 +206,7 @@ width: 100px;
 
 
 	font-size: 30px;
-	color:black;
+	color:#c7791b;
 }
 /*server end*/
 /*Contact start*/
@@ -205,6 +214,7 @@ width: 100px;
 background-image: url('assets/background-5.jpg');
 background-size: 100% 100%;
 padding: 45px 30px;
+width: 103%;
 }
 .contact form {
 	width: 100%;
@@ -222,7 +232,7 @@ padding: 45px 30px;
 
 }
 .contact form div input{
-	width: 100%;
+	width: 70%;
 	height: 60px;
 	padding: 20px 0px 20px 20px;
 	margin: 8px 0px;
@@ -255,9 +265,11 @@ color:#23272c;
 /*Contact end*/
 /*footer start*/
 footer{
+
 min-height: 60px;
+width: 103%;
 background-color: black;
-width: 100%;
+width: 107%;
 display: flex;
 justify-content: space-around;
 align-items: center;
